--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
                 // 左上の表示を見て、IdleとWalkの番号が違っていたらここを書き換えてください！
                 if (onGround) {
                     if (isMoving) {
-                        fadeTo(1); // 例: 1番がWalkの場合
+                        fadeTo(0)); // 例: 1番がWalkの場合
                     } else {
-                        fadeTo(0); // 例: 0番がIdleの場合
+                        fadeTo(1); // 例: 0番がIdleの場合
                     }
                 }
 
