--- a/index.html
+++ b/index.html
@@ -2,60 +2,76 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>新しいタブ</title>
+    <title>t</title>
     <style>
         body { margin: 0; overflow: hidden; background-color: #000; }
-        #debug { position: absolute; top: 10px; left: 10px; color: #0f0; background: rgba(0,0,0,0.7); padding: 10px; z-index: 20; font-family: monospace; }
+        #debug { position: absolute; top: 10px; left: 10px; color: #0f0; background: rgba(0,0,0,0.7); padding: 10px; z-index: 20; font-family: monospace; font-size: 12px; }
     </style>
 </head>
 <body>
-    <div id="debug">Loading...</div>
+    <div id="debug">Initializing...</div>
     <script type="importmap">
     {
-        "imports": { "three": "https://unpkg.com/three@0.160.0/build/three.module.js", "three/examples/jsm/": "https://unpkg.com/three@0.160.0/examples/jsm/" }
+        "imports": { 
+            "three": "https://unpkg.com/three@0.160.0/build/three.module.js", 
+            "three/examples/jsm/": "https://unpkg.com/three@0.160.0/examples/jsm/" 
+        }
     }
     </script>
     <script type="module">
         import * as THREE from 'three';
         import { GLTFLoader } from 'three/examples/jsm/loaders/GLTFLoader.js';
-        
+        import { DRACOLoader } from 'three/examples/jsm/loaders/DRACOLoader.js';
+
         const debugElement = document.getElementById('debug');
         const scene = new THREE.Scene();
         scene.background = new THREE.Color(0x87CEEB);
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+        camera.position.set(0, 2, 5);
         const renderer = new THREE.WebGLRenderer({ antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.domElement);
         scene.add(new THREE.AmbientLight(0xffffff, 2));
 
         let mixer, actions = {}, currentAction;
+
+        // Draco設定（これがないとnight.glbが読めない可能性が高い）
+        const dracoLoader = new DRACOLoader();
+        dracoLoader.setDecoderPath('https://www.gstatic.com/draco/versioned/decoders/1.5.6/');
         const loader = new GLTFLoader();
+        loader.setDRACOLoader(dracoLoader);
+
+        debugElement.innerHTML = "Step 1: Loading night.glb...";
 
         // 1. 体となる night.glb を読み込む
         loader.load('./night.glb', (gltf) => {
+            debugElement.innerHTML = "Step 2: night.glb Loaded. Loading idle.glb...";
             const model = gltf.scene;
             scene.add(model);
             mixer = new THREE.AnimationMixer(model);
 
-            // 元から入っているモーションを walk にする
             if (gltf.animations.length > 0) {
                 actions['walk'] = mixer.clipAction(gltf.animations[0]);
             }
 
-            // 2. idle.glb からモーションだけを借りてくる
+            // 2. idle.glb を読み込む
             loader.load('./idle.glb', (idleGltf) => {
                 if (idleGltf.animations.length > 0) {
-                    const idleClip = idleGltf.animations[0];
-                    actions['idle'] = mixer.clipAction(idleClip);
-                    
+                    actions['idle'] = mixer.clipAction(idleGltf.animations[0]);
                     currentAction = actions['idle'];
                     currentAction.play();
-                    debugElement.innerHTML = "Ready: Idle & Walk loaded";
+                    debugElement.innerHTML = "ALL SUCCESS: Ready to Move!";
+                } else {
+                    debugElement.innerHTML = "Error: idle.glb has no animation.";
                 }
+            }, undefined, (err) => {
+                debugElement.innerHTML = "Error loading idle.glb. check filename!";
             });
+
+        }, undefined, (err) => {
+            debugElement.innerHTML = "Error loading night.glb. check filename!";
         });
 
-        // アニメーション切り替え関数
         function fadeTo(name) {
             const next = actions[name];
             if (!next || currentAction === next) return;
@@ -65,8 +81,8 @@
         }
 
         const keys = {};
-        window.onkeydown = (e) => keys[e.code] = true;
-        window.onkeyup = (e) => keys[e.code] = false;
+        window.addEventListener('keydown', (e) => keys[e.code] = true);
+        window.addEventListener('keyup', (e) => keys[e.code] = false);
 
         const clock = new THREE.Clock();
         function animate() {
@@ -74,11 +90,9 @@
             if (mixer) mixer.update(clock.getDelta());
 
             const isMoving = keys['KeyE'] || keys['KeyS'] || keys['KeyQ'] || keys['KeyC'];
-            // 2つのアクションが揃っていれば切り替え
             if (actions['idle'] && actions['walk']) {
                 fadeTo(isMoving ? 'walk' : 'idle');
             }
-
             renderer.render(scene, camera);
         }
         animate();
