--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         const loader = new GLTFLoader();
 
         // 1つのファイル（UAL1_Standard.glb）だけを読み込むように変更
-        const MODEL_PATH = 'UAL1_Standard.glb';
+        const MODEL_PATH = 'UAL1.glb';
 
         loader.load(MODEL_PATH, (gltf) => {
             const model = gltf.scene;
