--- a/index.html
+++ b/index.html
@@ -5,33 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>新しいタブ</title>
     <style>
-        body { 
-            margin: 0; 
-            background-color: #333; 
-            overflow: hidden; 
-            font-family: sans-serif;
-        }
+        body { margin: 0; background-color: #333; overflow: hidden; font-family: sans-serif; }
         canvas { display: block; }
         #info { 
-            position: absolute; 
-            top: 10px; 
-            left: 10px; 
-            background: rgba(0, 0, 0, 0.7); 
-            color: white; 
-            padding: 15px; 
-            border-radius: 8px; 
-            pointer-events: none;
-            font-size: 14px;
-            line-height: 1.5;
+            position: absolute; top: 10px; left: 10px; 
+            background: rgba(0, 0, 0, 0.7); color: white; 
+            padding: 12px; border-radius: 5px; pointer-events: none;
         }
     </style>
 </head>
 <body>
-    <div id="info">
-        <b>FBX Animation Loader</b><br>
-        モデル読み込み中...<br>
-        <small>※Mixamoでリグ統一済みのファイルを使用</small>
-    </div>
+    <div id="info">モデル読み込み中...</div>
 
     <script type="importmap">
         {
@@ -41,8 +25,6 @@
             }
         }
     </script>
-
-    <script src="https://cdn.jsdelivr.net/npm/fflate@0.8.0/lib/browser.min.js"></script>
 
     <script type="module" src="main.js"></script>
 </body>
