--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
         canvas { display: block; }
         #info { 
             position: absolute; top: 10px; left: 10px; 
-            background: rgba(0, 0, 0, 0.7); color: white; 
-            padding: 12px; border-radius: 5px; pointer-events: none;
+            background: rgba(0, 0, 0, 0.8); color: white; 
+            padding: 15px; border-radius: 8px; pointer-events: none;
+            font-size: 14px; border: 1px solid #555;
         }
     </style>
 </head>
 <body>
-    <div id="info">モデル読み込み中...</div>
+    <div id="info">3Dモデル読み込み中...</div>
 
     <script type="importmap">
         {
