--- a/index.html
+++ b/index.html
@@ -3,28 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>KayKit Mobile Game</title>
-    <link rel="stylesheet" href="style.css">
+    <title>3D Debug Mode</title>
+    <style>
+        body { margin: 0; overflow: hidden; background: #111; font-family: sans-serif; }
+        /* 左上のデバッグログ */
+        #debug-log {
+            position: fixed; top: 10px; left: 10px; width: 60%; max-height: 40vh;
+            background: rgba(0,0,0,0.8); color: #0f0; font-size: 10px;
+            padding: 5px; overflow-y: auto; z-index: 1000; pointer-events: none;
+            border: 1px solid #333;
+        }
+        /* 右上のアニメーションリスト */
+        #anim-list {
+            position: fixed; top: 10px; right: 10px; width: 30%;
+            background: rgba(255,255,255,0.1); color: white;
+            padding: 5px; z-index: 1000;
+        }
+        .anim-btn {
+            display: block; width: 100%; margin-bottom: 5px; padding: 8px 2px;
+            background: #444; color: white; border: none; font-size: 10px; border-radius: 4px;
+        }
+        canvas { display: block; }
+    </style>
 </head>
 <body>
-    <div id="joystick-zone"></div>
+    <div id="debug-log">Log: Initializing...</div>
+    <div id="anim-list">Anim List:</div>
 
-    <script type="importmap">
-        {
-            "imports": {
-                "three": "https://unpkg.com/three@0.160.0/build/three.module.js",
-                "three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/",
-                "nipplejs": "https://cdn.jsdelivr.net/npm/nipplejs@0.10.1/dist/nipplejs.js"
-            }
-        }
-<script type="importmap">
-{
-    "imports": {
-        "three": "https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.module.js",
-        "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.160.0/examples/jsm/",
-        "nipplejs": "https://cdn.jsdelivr.net/npm/nipplejs@0.10.1/dist/nipplejs.js"
-    }
-}
-</script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
