--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>3D Complete One-File</title>
+    <title>3D Debug iPhone OK</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.160.0/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/examples/js/loaders/GLTFLoader.js"></script>
     <style>
         body { margin: 0; overflow: hidden; background: #111; font-family: sans-serif; color: white; }
         #debug-log {
@@ -22,82 +24,88 @@
     </style>
 </head>
 <body>
-    <div id="debug-log">Log: HTML Loaded. Waiting for JS...</div>
+    <div id="debug-log">Log: Initializing...</div>
     <div id="anim-list">Anim List:</div>
 
-    <script type="module">
-        import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.module.js';
-        import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.160.0/examples/jsm/loaders/GLTFLoader.js';
-
+    <script>
+        // スマホ画面に文字を出す関数
         const logEl = document.getElementById('debug-log');
         const animListEl = document.getElementById('anim-list');
 
         function debug(msg, isError = false) {
             const div = document.createElement('div');
             div.style.color = isError ? '#ff4444' : '#0f0';
-            div.innerText = `> ${msg}`;
+            div.innerText = "> " + msg;
             logEl.appendChild(div);
             logEl.scrollTop = logEl.scrollHeight;
         }
 
-        // 実行開始
-        debug("JS Module Execution Started");
+        // 実行開始の合図
+        debug("Starting JavaScript...");
 
-        const scene = new THREE.Scene();
-        scene.background = new THREE.Color(0x222222);
+        try {
+            const scene = new THREE.Scene();
+            scene.background = new THREE.Color(0x222222);
 
-        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-        camera.position.set(0, 2, 5);
+            const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+            camera.position.set(0, 2, 5);
 
-        const renderer = new THREE.WebGLRenderer({ antialias: true });
-        renderer.setSize(window.innerWidth, window.innerHeight);
-        renderer.setPixelRatio(window.devicePixelRatio);
-        document.body.appendChild(renderer.domElement);
-
-        const light = new THREE.AmbientLight(0xffffff, 2);
-        scene.add(light);
-
-        let mixer;
-        const loader = new GLTFLoader();
-
-        debug("Loading Model: public/Mannequin_Medium.glb");
-
-        loader.load('./public/Mannequin_Medium.glb', (gltf) => {
-            scene.add(gltf.scene);
-            debug("SUCCESS: Model Displayed");
-
-            loader.load('./public/UAL2_Standard.glb', (animGltf) => {
-                debug(`SUCCESS: ${animGltf.animations.length} Anims Found`);
-                mixer = new THREE.AnimationMixer(gltf.scene);
-
-                animGltf.animations.forEach((clip) => {
-                    const btn = document.createElement('button');
-                    btn.className = 'anim-btn';
-                    btn.innerText = clip.name;
-                    btn.onclick = () => {
-                        mixer.stopAllAction();
-                        mixer.clipAction(clip).play();
-                        debug(`Play: ${clip.name}`);
-                    };
-                    animListEl.appendChild(btn);
-                });
-            }, undefined, (e) => debug("ANIM ERROR: " + e.message, true));
-
-        }, undefined, (e) => debug("MODEL ERROR: Check public/ folder", true));
-
-        const clock = new THREE.Clock();
-        function animate() {
-            requestAnimationFrame(animate);
-            if (mixer) mixer.update(clock.getDelta());
-            renderer.render(scene, camera);
-        }
-        animate();
-
-        window.addEventListener('resize', () => {
-            camera.aspect = window.innerWidth / window.innerHeight;
-            camera.updateProjectionMatrix();
+            const renderer = new THREE.WebGLRenderer({ antialias: true });
             renderer.setSize(window.innerWidth, window.innerHeight);
-        });
+            renderer.setPixelRatio(window.devicePixelRatio);
+            document.body.appendChild(renderer.domElement);
+
+            const light = new THREE.AmbientLight(0xffffff, 2);
+            scene.add(light);
+
+            let mixer;
+            // THREE.GLTFLoader を使う（Scriptタグ読み込み時の書き方）
+            const loader = new THREE.GLTFLoader();
+
+            debug("Loading Model...");
+
+            loader.load('./public/Mannequin_Medium.glb', function(gltf) {
+                scene.add(gltf.scene);
+                debug("SUCCESS: Model Loaded");
+
+                loader.load('./public/UAL2_Standard.glb', function(animGltf) {
+                    debug("SUCCESS: Anims Found (" + animGltf.animations.length + ")");
+                    mixer = new THREE.AnimationMixer(gltf.scene);
+
+                    animGltf.animations.forEach(function(clip) {
+                        const btn = document.createElement('button');
+                        btn.className = 'anim-btn';
+                        btn.innerText = clip.name;
+                        btn.onclick = function() {
+                            mixer.stopAllAction();
+                            mixer.clipAction(clip).play();
+                            debug("Playing: " + clip.name);
+                        };
+                        animListEl.appendChild(btn);
+                    });
+                }, undefined, function(e) { debug("Anim Error: " + e.message, true); });
+
+            }, undefined, function(e) { debug("Model Error: " + e.message, true); });
+
+            const clock = new THREE.Clock();
+            function animate() {
+                requestAnimationFrame(animate);
+                if (mixer) mixer.update(clock.getDelta());
+                renderer.render(scene, camera);
+            }
+            animate();
+
+            window.addEventListener('resize', function() {
+                camera.aspect = window.innerWidth / window.innerHeight;
+                camera.updateProjectionMatrix();
+                renderer.setSize(window.innerWidth, window.innerHeight);
+            });
+
+            debug("Render Loop Started");
+
+        } catch (err) {
+            debug("Critical Error: " + err.message, true);
+        }
     </script>
 </body>
 </html>
